syntax = "proto3";
package account_state;
option go_package = "/proto";

message AccountState {
    bytes Address = 1;
    bytes LastHash = 2;
    bytes Balance = 3;
    bytes PendingBalance = 4;
    bytes StakingBalance = 5;
    SmartContractInfo SmartContractInfo = 6;
    bytes DeviceKey = 7;
}

message SmartContractInfo {
    bytes CreatorPublicKey = 1;
    string StorageHost = 2; // host that store smart contract state of account
    bytes CodeHash = 3; // hash of smart contract state
    bytes StorageRoot = 4; // hash of smart contract state
    bytes LogsHash = 5; // hash of smart contract state
    repeated bytes RelatedAddresses = 6; // address of smart contract relate to this smart contract, use for parrallel execute
    bytes CommissionHash = 7; // merkel root of commission states
}

message SmartContractCommissionState {
    bytes CommissionAddress = 1;
    uint64 ExpiredAt = 2;
    bytes AmountLeft = 3;
}

message SmartContractState {
    bytes Code = 1;
    map<string,bytes> Storage = 2;
    map<string,SmartContractCommissionState> CommissionStates = 3; // map Address with commission data
}