syntax = "proto3";
package block;

option go_package = "/proto";

import "account_state.proto";
import "receipt.proto";


message BlockHashData {
    bytes Count = 1;
    bytes LastEntryHash = 2;
    bytes AccountStateRoot = 3;
    bytes ReceiptRoot = 4;
}

message Block {
    bytes Hash = 1;
    bytes Count = 2;
    bytes LastEntryHash = 3;
    bytes AccountStateRoot = 4;
    bytes ReceiptRoot = 5;
    int64 TimeStamp = 6;
}

message FullBlock {
    Block Block = 1;
    repeated account_state.AccountState AccountStateChanges = 2;
    repeated receipt.Receipt Receipts = 3;
    map<string,bytes> ValidatorSigns = 4;
}

message ConfirmBlock {
    bytes Hash = 1;
    bytes Count = 2;
    map<string,bytes> ValidatorSigns = 3;
}